# shell-utils

./: README.md
build-scripts/cmake/: CMakeLists.txt
prefix/share/iscoolentertainment/cmake/: uninstall.cmake  uninstall.cmake.in  unity-build.cmake
prefix/share/iscoolentertainment/shell/: colors.sh  md5.sh  mime-types.sh  options.sh  platform.sh  temporaries.sh  testing.sh
tests/: copy-tree.sh  download.sh  link-tree.sh  multiple-options.sh  options.sh  relative-path.sh  rm-colors.sh  run-all-scripts.sh  temporaries.sh
